Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
+++ b/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
@@ -152,7 +152,7 @@
         "id": "sIGxdX_5canB"
       },
       "source": [
-        "# Búsqueda secuencial (valores numéricos)\n",
+        "# Búsqueda Secuencial (valores numéricos)\n",
         "\n",
         "En este ejemplo vamos a ver la versión de la búsqueda secuencial utilizando valores numéricos y más adelante mostramos el caso general con objetos.\n"
       ]
@@ -161,15 +161,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "iuSyb2A5YWwO",
-        "outputId": "55d57d98-6657-45ac-ffbd-bf27a1a2b2f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b6589842-64fe-4378-cdae-86e61f49e344"
       },
       "source": [
-        "''' Algoritmo que implementa la búsqueda secuencial\n",
-        "    coleccion: coleccion de datos\n",
-        "    dato?      dato a buscar en la coleccion\n",
+        "''' \n",
+        "Algoritmo que implementa la búsqueda secuencial\n",
+        "coleccion: coleccion de datos\n",
+        "dato:      dato a buscar en la coleccion\n",
         "'''\n",
         "def b_secuencial(coleccion, valor):\n",
         "  for i in range(len(coleccion)):\n",
@@ -185,7 +186,7 @@
         "#valor = 105\n",
         "print(b_secuencial(col, valor))"
       ],
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,10 +211,226 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z6oqB29zdhAC"
+        "id": "jE5EfDJqarzY"
       },
       "source": [
-        "##**Apendice**"
+        "# Paradigma Orientado a Objetos (POO)\n",
+        "\n",
+        "Hasta este momento hemos desarrollado algoritmos empleando el paradigma funcional, lo que quiere decir que todos nuestros algoritmos han sido definidos en forma de funciones (`def funcion()`).\n",
+        "\n",
+        "Sin embargo existen diferentes [paradigmas](https://www.4rsoluciones.com/blog/que-son-los-paradigmas-de-programacion-2/) de programación, por mencionar algunos:\n",
+        "\n",
+        "*   Funcional.\n",
+        "*   Prodecimental.\n",
+        "*   Lógico.\n",
+        "*   Orientado a objetos.\n",
+        "\n",
+        "En los problemas reales, los algoritmos no solo se aplican a valores numéricos (como se ha visto hasta el momento), de hecho en la gran mayoria de casos todo algoritmo tiene que resolver un problema que involucra **objetos** de manera general.\n",
+        "\n",
+        "Por lo tanto la finalidad de esta sección es mostrar como utilizar el paradigma orientado a objetos para adaptar los algoritmos vistos previamente (y los que veremos en el restos del curso) con la finalidad de que funcionen con cualquier clase de objeto, no únicamente valores numéricos.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-2FOVkWddYXZ"
+      },
+      "source": [
+        "## Definición de clases\n",
+        "\n",
+        "Las clases dentro del POO sirven para agrupar un conjunto de atributos y comportamientos que poseeran los elementos pertenecientes a esta clase.\n",
+        "\n",
+        "Por ejemplo supongamos que necesitamos aplicar los algoritmos del curso sobre los alumnos de la Facultad de Ciencias, por lo tanto necesitamos definir una clase que nos permita **abstraer las caracteristicas que nos interese modelar** y sobretodo que nos permita generar **objetos de tipo alumno**.\n",
+        "\n",
+        "Por lo tanto vamos a generar la clase `AlumnoFC` que contendra como atributos de cada alumno:\n",
+        "\n",
+        "*   Nombre.\n",
+        "*   Número de cuenta.\n",
+        "*   Calificaciones.\n",
+        "\n",
+        "Y como comportamientos (métodos) vamos tener:\n",
+        "\n",
+        "*   Constructor de alumnos: este método nos permite crear objetos de tipo alumno\n",
+        "*   Operadores de comparación entre alumnos ($\\leq, \\ge$, =): estos métodos nos permiten establecer un orden entre los alumnos y sobretodo nos permitira compraralos.\n",
+        "*   Promedio: devuelve el promedio del alumno.\n",
+        "\n",
+        "A continuación se muestra la definición de la clase `AlumnoFC`.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8_DjsTdijvDp",
+        "outputId": "8e941bc4-5071-4d03-faae-90e626ced552",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Clase para generar objetos de tipo alumno\n",
+        "class AlumnoFC(object):\n",
+        "\n",
+        "  # Constructor de alumnos\n",
+        "  def __init__(self, nombre, numero_cuenta, calif):\n",
+        "    self.nombre = nombre\n",
+        "    self.numero_cuenta = numero_cuenta\n",
+        "    self.calificaciones = calif\n",
+        "\n",
+        "  # Sobrecarga de los operadores de comparación\n",
+        "  # Determina si un alumno es igual a otro\n",
+        "  def iguales(self, otro):\n",
+        "    if self.numero_cuenta == otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es mayor o igual a otro\n",
+        "  def mayor_que(self, otro):\n",
+        "    if self.numero_cuenta >= otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es menor o igual a otro\n",
+        "  def menor_que(self, otro):\n",
+        "    if self.numero_cuenta <= otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "  \n",
+        "  def promedio(self):\n",
+        "    promedio = sum(self.calificaciones)/len(self.calificaciones)\n",
+        "    return promedio\n",
+        "\n",
+        "# Pruebas de la clase AlumnosFC\n",
+        "Mike = AlumnoFC('Miguel Angel Perez Leon', 30134563, [10, 10, 10, 9, 10])\n",
+        "Aitor = AlumnoFC('Peter', 20134563, [8, 10, 9, 9, 10])\n",
+        "\n",
+        "# Pruebas del metodo promedio\n",
+        "print(Mike.promedio())\n",
+        "print(Aitor.promedio())\n",
+        "\n",
+        "# Prueba del metodo iguales\n",
+        "print(Mike.iguales(Aitor))\n",
+        "print(Mike.iguales(Mike))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9.8\n",
+            "9.2\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7P-nJ2jpkq8g"
+      },
+      "source": [
+        "## Sobrecarga de Operadores (*Overload*)\n",
+        "\n",
+        "En la primera definición de la clase `AlumnoFC` podemos ver una versión temprana de la implementación de las características que nos interesa modelos de los alumnos de la Facultad de Ciencias, sin embargo tiene un problema.\n",
+        "\n",
+        "El problema radíca en la definición de los méodos de comparación (`iguales, mayor_que, menor_que`) ya que en caso de que quisieramos usar nuestros algoritmos de ordenamiento o de búsqueda con objetos de la clase `AlumnoFC` tendríamos que cambiar todo signo $==,\\geq,\\leq$ por su respectivo método de la clase `AlumnoFC`.\n",
+        "\n",
+        "Sin embargo la POO y en particular *Python 3.x* nos proporciona un mecanismo conocido como **Sobrecarga de Operadores**, lo que significa que mediante código, redefiniendo los operadore de comparación podemos ahorrarnos el trabajo de cambiar los operadores de compración y utilizar de manera natural los algoritmos de ordenamiento y de búsqueda vistos hasta el momento.\n",
+        "\n",
+        "Los 3 métodos principales que se tienen que sobrecargar (*overload*) son:\n",
+        "\n",
+        "*   `iguales`: se substituye por `__eq__` y corresponde al operador de comparación $==$.\n",
+        "*   `mayor_que`: se substituye por `__ge__` y corresponde al operador de comparación $\\geq$.\n",
+        "*   `menor_que`: se substituye por `__le__` y corresponde al operador de comparación $\\leq$.\n",
+        "\n",
+        "Existen más operadores que puede ser sobrecargados pero **para nuestros algoritmos, basta con estos**."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eIjchSbjfvXR",
+        "outputId": "e346037e-d809-4ca6-d022-f1bdf7d03ffb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Clase para generar objetos de tipo alumno\n",
+        "class AlumnoFC(object):\n",
+        "\n",
+        "  # Constructor de alumnos\n",
+        "  def __init__(self, nombre, numero_cuenta, calif):\n",
+        "    self.nombre = nombre\n",
+        "    self.numero_cuenta = numero_cuenta\n",
+        "    self.calificaciones = calif\n",
+        "\n",
+        "  # Sobrecarga de los operadores de comparación\n",
+        "  # Determina si un alumno es igual a otro\n",
+        "  def __eq__(self, otro):\n",
+        "    if self.numero_cuenta == otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es mayor o igual a otro\n",
+        "  def __ge__(self, otro):\n",
+        "    if self.numero_cuenta >= otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "\n",
+        "  # Indica si un alumnos es menor o igual a otro\n",
+        "  def __le__(self, otro):\n",
+        "    if self.numero_cuenta <= otro.numero_cuenta:\n",
+        "      return True\n",
+        "    else:\n",
+        "      return False\n",
+        "  \n",
+        "  def promedio(self):\n",
+        "    promedio = sum(self.calificaciones)/len(self.calificaciones)\n",
+        "    return promedio\n",
+        "\n",
+        "# Pruebas con la clase AlumnosFC\n",
+        "Mike = AlumnoFC('Miguel Angel Perez Leon', 30134563, [10, 10, 10, 9, 10])\n",
+        "Aitor = AlumnoFC('Aitor', 20134563, [8, 10, 9, 9, 10])\n",
+        "Pete = AlumnoFC('Peter', 110134563, [9, 8, 8, 9, 10])\n",
+        "\n",
+        "# Coleccion de alumnos \n",
+        "alumnos = [Mike, Aitor, Pete]\n",
+        "# Alumno a buscar\n",
+        "alumno = 30134563\n",
+        "\n",
+        "print(b_secuencial(alumnos, Pete))\n",
+        "\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WDYVwYufp0-m"
+      },
+      "source": [
+        "¡Perfecto!, ya podemos utilizar la `b_secuencial` que definimos previamente para valores numéricos, pero ahora la estamos usando con objetos de la clase `AumnosFC` y lo mejor es que no tuvimos que realizar cambios sobre elagoritmo de busqueda secuencial visto previamente, ahora podemos buscar alumnos.\n",
+        "\n",
+        "Queda como tarea moral (conveniente hacerlo antes del examen) ¿qué se debe hacer para poder emplear los algoritmos de ordenamiento para ordenar objetos de tipo `AumnosFC`."
       ]
     },
     {
