Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
+++ b/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
@@ -52,7 +52,7 @@
       "source": [
         "# Introducción\n",
         "\n",
-        "El algoritmo de busnqueda secuencial (o lineál) es uno de los algoritmos de búsqueda más sencillos de comprender y fáciles de implementar.\n",
+        "El algoritmo de búsqueda secuencial (o lineal) es uno de los algoritmos de búsqueda más sencillos de comprender y fáciles de implementar.\n",
         "\n",
         "La forma de trabajar de este algoritmo es iterar sobre la estructura de datos (lista, vector, colección, etc.) elemento por elemento hasta encontrar el dato buscado.\n",
         "\n",
@@ -86,9 +86,9 @@
         "\n",
         "El análisis de la complejidad de este algoritmo es de lo más sencillo y para no perder la costumbre, tratemos de identificar el peor caso para poder comenzar con el análisis de la complejidad de este algoritmo.\n",
         "\n",
-        "Para una colección de datos de longitud 0 ó 1, este algoritmo **realiza una sola operación**, ya que a lo más se tiene un elemento con el cuál compar el dato a buscar\n",
+        "Para una colección de datos de longitud 0 ó 1, este algoritmo **realiza una sola operación**, ya que a lo más se tiene un elemento con el cuál comparar el dato a buscar\n",
         "\n",
-        "En una colección de longitud 2 (y suponinedo que el dato a buscar se encuentra en la ultima localidad de la colección), este algoritmo **realiza 2 comparaciones**, una por cada elemento de la colección.\n",
+        "En una colección de longitud 2 (y suponiedo que el dato a buscar se encuentra en la ultima localidad de la colección), este algoritmo **realiza 2 comparaciones**, una por cada elemento de la colección.\n",
         "\n",
         "Si se tiene una colección de longitud 3 (y considerando el peor caso), este algoritmo **realiza 3 comparaciones**.\n",
         "\n",
@@ -117,9 +117,9 @@
         "\n",
         "Es importante notar que hay diferencia entre el contenido de cada elemento y el índice que caracteriza a cada elemento, el algoritmo indica que se tiene que recorrer toda la colección (elemento por elemento) hasta localizar el dato $x$.\n",
         "\n",
-        "De tal manera que el peor caso para este algoritmo sería cuando el dato a buscar se encuentra en la útima posición de la colección (como se muestra en la imagen), ya que en ese caso el algoritmo tiene que realizar **$n$ comparaciones**, una por cada dato de la colección.\n",
+        "De tal manera que el peor caso para este algoritmo sería cuando el dato a buscar se encuentra en la última posición de la colección (como se muestra en la imagen), ya que en ese caso el algoritmo tiene que realizar **$n$ comparaciones**, una por cada dato de la colección.\n",
         "\n",
-        "Por lo tanto para una colección de datos de longitud $n$ este algoritmo realiza $n$ compraciones, en otras palabras.\n",
+        "Por lo tanto para una colección de datos de longitud $n$ este algoritmo realiza $n$ última, en otras palabras.\n",
         "\n",
         "$$\n",
         "T(n) \\in O(n)\n",
@@ -134,16 +134,9 @@
       "source": [
         "## Demostración\n",
         "\n",
-        "En este caso (y algunos otros) **no hace falta una demostración formal matemática** para mostrar que este algoritmo pertenece al orden lineal, basta con identificar el peor caso y justificar el número de comparaciones que este algoritmo realiza para colecciones de longitud arbirtraria."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FZoa-33-aGV3"
-      },
-      "source": [
-        "En este caso (y algunos otros) **no hace falta una demostración formal matemática** para mostrar que este algoritmo pertenece al orden lineal, basta con identificar el peor caso y justificar el número de comparaciones que este algoritmo realiza para colecciones de longitud arbirtraria.\n"
+        "En este caso (y algunos otros) **no hace falta una demostración formal matemática** para mostrar que este algoritmo pertenece al orden lineal, basta con identificar el peor caso y justificar el número de comparaciones que este algoritmo realiza para colecciones de longitud arbitraria.\n",
+        "\n",
+        "En este caso (y algunos otros) **no hace falta una demostración formal matemática** para mostrar que este algoritmo pertenece al orden lineal, basta con identificar el peor caso y justificar el número de comparaciones que este algoritmo realiza para colecciones de longitud arbitraria."
       ]
     },
     {
@@ -186,7 +179,7 @@
         "#valor = 105\n",
         "print(b_secuencial(col, valor))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +198,7 @@
       "source": [
         "En la implementación de la celda superior se busca un valor numérico y en caso de encontrar el valor se devuelve el indice (no el valor) del dato buscado.\n",
         "\n",
-        "En otro caso se devuelve False, lo que indica que el valor no se encontraba en la colección."
+        "En otro caso se devuelve `False`, lo que indica que el valor no se encontraba en la colección."
       ]
     },
     {
@@ -221,11 +214,11 @@
         "Sin embargo existen diferentes [paradigmas](https://www.4rsoluciones.com/blog/que-son-los-paradigmas-de-programacion-2/) de programación, por mencionar algunos:\n",
         "\n",
         "*   Funcional.\n",
-        "*   Prodecimental.\n",
+        "*   Procedimental.\n",
         "*   Lógico.\n",
         "*   Orientado a objetos.\n",
         "\n",
-        "En los problemas reales, los algoritmos no solo se aplican a valores numéricos (como se ha visto hasta el momento), de hecho en la gran mayoria de casos todo algoritmo tiene que resolver un problema que involucra **objetos** de manera general.\n",
+        "En los problemas reales, los algoritmos no solo se aplican a valores numéricos (como se ha visto hasta el momento), de hecho en la gran mayoría de casos todo algoritmo tiene que resolver un problema que involucra **objetos** de manera general.\n",
         "\n",
         "Por lo tanto la finalidad de esta sección es mostrar como utilizar el paradigma orientado a objetos para adaptar los algoritmos vistos previamente (y los que veremos en el restos del curso) con la finalidad de que funcionen con cualquier clase de objeto, no únicamente valores numéricos.\n"
       ]
@@ -238,11 +231,11 @@
       "source": [
         "## Definición de clases\n",
         "\n",
-        "Las clases dentro del POO sirven para agrupar un conjunto de atributos y comportamientos que poseeran los elementos pertenecientes a esta clase.\n",
+        "Las clases dentro del POO sirven para agrupar un conjunto de atributos y comportamientos que poseerán los elementos pertenecientes a esta clase.\n",
         "\n",
-        "Por ejemplo supongamos que necesitamos aplicar los algoritmos del curso sobre los alumnos de la Facultad de Ciencias, por lo tanto necesitamos definir una clase que nos permita **abstraer las caracteristicas que nos interese modelar** y sobretodo que nos permita generar **objetos de tipo alumno**.\n",
+        "Por ejemplo supongamos que necesitamos aplicar los algoritmos del curso sobre los alumnos de la Facultad de Ciencias, por lo tanto necesitamos definir una clase que nos permita **abstraer las características que nos interese modelar** y sobretodo que nos permita generar **objetos de tipo alumno**.\n",
         "\n",
-        "Por lo tanto vamos a generar la clase `AlumnoFC` que contendra como atributos de cada alumno:\n",
+        "Por lo tanto vamos a generar la clase `AlumnoFC` que contendrá como atributos de cada alumno:\n",
         "\n",
         "*   Nombre.\n",
         "*   Número de cuenta.\n",
@@ -251,7 +244,7 @@
         "Y como comportamientos (métodos) vamos tener:\n",
         "\n",
         "*   Constructor de alumnos: este método nos permite crear objetos de tipo alumno\n",
-        "*   Operadores de comparación entre alumnos ($\\leq, \\ge$, =): estos métodos nos permiten establecer un orden entre los alumnos y sobretodo nos permitira compraralos.\n",
+        "*   Operadores de comparación entre alumnos ($\\leq, \\ge$, =): estos métodos nos permiten establecer un orden entre los alumnos y sobretodo nos permitirá compararlos.\n",
         "*   Promedio: devuelve el promedio del alumno.\n",
         "\n",
         "A continuación se muestra la definición de la clase `AlumnoFC`.\n",
@@ -263,10 +256,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8_DjsTdijvDp",
-        "outputId": "8e941bc4-5071-4d03-faae-90e626ced552",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8e941bc4-5071-4d03-faae-90e626ced552"
       },
       "source": [
         "# Clase para generar objetos de tipo alumno\n",
@@ -316,7 +309,7 @@
         "print(Mike.iguales(Aitor))\n",
         "print(Mike.iguales(Mike))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,9 +333,9 @@
         "\n",
         "En la primera definición de la clase `AlumnoFC` podemos ver una versión temprana de la implementación de las características que nos interesa modelos de los alumnos de la Facultad de Ciencias, sin embargo tiene un problema.\n",
         "\n",
-        "El problema radíca en la definición de los méodos de comparación (`iguales, mayor_que, menor_que`) ya que en caso de que quisieramos usar nuestros algoritmos de ordenamiento o de búsqueda con objetos de la clase `AlumnoFC` tendríamos que cambiar todo signo $==,\\geq,\\leq$ por su respectivo método de la clase `AlumnoFC`.\n",
+        "El problema radica en la definición de los métodos de comparación (`iguales, mayor_que, menor_que`) ya que en caso de que quisiéramos usar nuestros algoritmos de ordenamiento o de búsqueda con objetos de la clase `AlumnoFC` tendríamos que cambiar todo signo $==,\\geq,\\leq$ por su respectivo método de la clase `AlumnoFC`.\n",
         "\n",
-        "Sin embargo la POO y en particular *Python 3.x* nos proporciona un mecanismo conocido como **Sobrecarga de Operadores**, lo que significa que mediante código, redefiniendo los operadore de comparación podemos ahorrarnos el trabajo de cambiar los operadores de compración y utilizar de manera natural los algoritmos de ordenamiento y de búsqueda vistos hasta el momento.\n",
+        "Sin embargo la POO y en particular *Python 3.x* nos proporciona un mecanismo conocido como **Sobrecarga de Operadores**, lo que significa que mediante código, redefiniendo los operadores de comparación podemos ahorrarnos el trabajo de cambiar los operadores de comparación y utilizar de manera natural los algoritmos de ordenamiento y de búsqueda vistos hasta el momento.\n",
         "\n",
         "Los 3 métodos principales que se tienen que sobrecargar (*overload*) son:\n",
         "\n",
@@ -357,10 +350,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "eIjchSbjfvXR",
-        "outputId": "e346037e-d809-4ca6-d022-f1bdf7d03ffb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e346037e-d809-4ca6-d022-f1bdf7d03ffb"
       },
       "source": [
         "# Clase para generar objetos de tipo alumno\n",
@@ -411,7 +404,7 @@
         "print(b_secuencial(alumnos, Pete))\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +421,7 @@
         "id": "WDYVwYufp0-m"
       },
       "source": [
-        "¡Perfecto!, ya podemos utilizar la `b_secuencial` que definimos previamente para valores numéricos, pero ahora la estamos usando con objetos de la clase `AumnosFC` y lo mejor es que no tuvimos que realizar cambios sobre elagoritmo de busqueda secuencial visto previamente, ahora podemos buscar alumnos.\n",
+        "¡Perfecto!, ya podemos utilizar la `b_secuencial` que definimos previamente para valores numéricos, pero ahora la estamos usando con objetos de la clase `AumnosFC` y lo mejor es que no tuvimos que realizar cambios sobre el algoritmo de búsqueda secuencial visto previamente, ahora podemos buscar alumnos.\n",
         "\n",
         "Queda como tarea moral (conveniente hacerlo antes del examen) ¿qué se debe hacer para poder emplear los algoritmos de ordenamiento para ordenar objetos de tipo `AumnosFC`."
       ]
@@ -439,14 +432,11 @@
         "id": "hiNbT80EdmCW"
       },
       "source": [
-        "### Referencias\n",
+        "# Referencias\n",
         "\n",
         "* Thomas H. Cormen: Introduction to Algorithms.\n",
-        "\n",
         "* Referencias Libro Web: Introduccion a Python.\n",
-        "\n",
         "* Referencias Daniel T. Joyce: Object-Oriented Data Structures.\n",
-        "\n",
         "* Referencias John C. Mitchell: Concepts in programing Languages."
       ]
     }
