Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
+++ b/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
@@ -38,7 +38,8 @@
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
         "  </font>"
       ]
@@ -51,10 +52,30 @@
       "source": [
         "##**Introducción**\n",
         "\n",
-        "En clase se dio la descripción del algoritmo de búsqueda binaria.\n",
+        "Para este algoritmo vamos a pensarlo de forma adelantada a un tema de análsis numérico. Imaginemos que queremos encontrar la raíz de una función $f(x)$ en el rango $[a,b]$.\n",
         "\n",
-        " \n",
-        "Es por este motivo que en este documento se parte del hecho que el lector conoce tanto el planteamiento, como el pseudocódigo de este algoritmo.\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/Numerico2021/blob/master/Figuras/raicesNumericas/esqbis.PNG?raw=1\" width=\"700\">\n",
+        "</center>\n",
+        "\n",
+        "Lo más sencillo es partir el interbalo $[a,b]$ por la mitad y preguntarnos ¿qué sucede con ese valor al ser evaluado bajo $f(x)$.\n",
+        "\n",
+        "$$x_{1}=a+\\frac{b-a}{2}=\\frac{2a+b-a}{2}=\\frac{a+b}{2} \\tag{1}$$\n",
+        "\n",
+        "Para obtener el $n$-esimo punto medio, la ecuación seria:\n",
+        "\n",
+        "$$x_{n}=\\frac{a_{n-1}+b_{n-1}}{2} \\tag{2}$$\n",
+        "\n",
+        "A la ecuación (2) se le denomina método iterativo del punto medio, actualizando iterativamente los valores de $a$ y $b$ de la siguiente forma.\n",
+        "\n",
+        "Se verifican los signos de $f(a)*f(x_{n})$ y $f(x_{n})*f(b)$, para saber en que subintervalo se encuentra la raíz:\n",
+        "\n",
+        "*   Si $f(a)*f(x_{n})<0$, entonces en el subintervalo $[a,x_{n}]$ se encuentra la raíz, renombrando $a=a$ y $b=x_{n}$.\n",
+        "*   Si $f(a)*f(x_{n})>0$, entonces en el subintervalo $[x_{n},b]$ se encuentra la raíz, renombrando $a=x_{n}$ y $b=b$.\n",
+        "\n",
+        "Después de un número suficiente de iteraciones, la aproximación $x_n$ es lo suficientemente cercana a la raźi de $f(x)$.\n",
+        "\n",
+        "En nuestro caso (manejo de datos) a este algoritmo se le conoce como **Búsqueda Binaria** y es más sencillo que el algoritmo descrito previamente, ya que nos vamos a restringir a los $\\mathbb{N}$ ya que este campo es el que da orden a los datos y no tiene sentido tener valores negativos o racionales.\n",
         "\n",
         "Dado estos antecedentes procedemos a definir la función de recurrencia, para poder definir a que orden de complejidad pertenece este algoritmo **recursivo**."
       ]
@@ -62,10 +83,30 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KbdCyfv2T4b3"
+        "id": "X4irpssgPuh0"
       },
       "source": [
-        "##**Función de Recurrencia**"
+        "# Descipición del agoritmo\n",
+        "\n",
+        "Como prerequisito este algoritmo requiere que la búsqueda debe realizarse sobre datos ordenados y es muy sencillo.\n",
+        "\n",
+        "Sea $n$ la longitud de los datos en los cuales se realizara la búsqueda y dado que no tenemos índices negativos, lo primero es partir la longitd de la colección de datos a la mitad y preguntar si el dato que se busca se encuentra en esa localidad.\n",
+        "\n",
+        "Si se encuentra ahi termina la búsqueda, en caso contrario se ajustan los limites de la búsqueda y se vuelve a realizar el mismo proceso hasta encontrar el dato."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kg6_8TGwU3nw"
+      },
+      "source": [
+        "###Algoritmo Básico\n",
+        "\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/BBR.png?raw=1\" width=\"600\"> \n",
+        "</center>\n"
       ]
     },
     {
@@ -81,20 +122,6 @@
         "Es importante recalcar que este algoritmo pide como requisito que los **elementos de la colección se encuentren ordenados**. Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección y preguntar si el elemento que se busca es mayor o menor al elemento que se encuentra a la mitad de la colección. Y dependiendo de la comparación se descarta una de las 2 mitades y se procede a buscar al elemento en la otra mitad.\n",
         "\n",
         "Es por esto que buscar un elemento en una colección de tamaño $n$ tomará en total $T(\\frac{n}{2})+a$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kg6_8TGwU3nw"
-      },
-      "source": [
-        "###Algoritmo Básico\n",
-        "\n",
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/BBR.png?raw=1\" width=\"600\"> \n",
-        "</center>\n"
       ]
     },
     {
