Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
+++ b/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
@@ -161,12 +161,10 @@
         "id": "FZoa-33-aGV3"
       },
       "source": [
-        "Sea $T(n)$ el número de operaciones que le toma al algoritmo anterior buscar un dato en una lista de tamaño $n$ y dada la función de recurrencia. *P.D.* $T(n)=\\log n$, para mayor claridad de la demostración definimos $n=2^{k}$\n",
+        "Sea $T(n)$ el número de operaciones que le toma al algoritmo anterior buscar un dato en una lista de tamaño $n$ y dada la función de recurrencia. P.D. $T(n)=b*a+\\log_2 n$.\n",
         "\n",
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/Demostracion.png?raw=1\" width=\"600\"> \n",
-        "</center>"
+        "La demostración queda como ejercicio al lector.\n",
+        "\n"
       ]
     },
     {
