Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
+++ b/AlgoritmosBusqueda/02_BusquedaBinaria.ipynb
@@ -132,18 +132,16 @@
       "source": [
         "### ¿Qué sucede con colecciones de tamaño n?\n",
         "\n",
-        "Dado el análisis (y el pseudocódigo del algoritmo) podemos ver que buscar un dato en una colección de tamaño $n$ tomara $T(\\frac{n}{2})+a$. Pero este valor aun no permite identificar a que orden de complejidad pertenece este algoritmo.\n",
+        "Dado el análisis (y el pseudocódigo del algoritmo) podemos ver que buscar un dato en una colección de tamaño $n$ tomara $T(\\frac{n}{2})+a$. Pero este valor aún no permite identificar a que orden de complejidad pertenece este algoritmo.\n",
         "\n",
         "Es por eso que necesitamos definir la función de recurrencia de la siguiente forma.\n",
         "\n",
-        "Función de recurrencia para el algoritmo de busqueda binaria:\n",
+        "Función de recurrencia para el algoritmo de búsqueda binaria:\n",
         "\n",
         "$$T(n)=\\begin{cases}\n",
         "b, & n=0\\,\\acute{o}\\,n=1\\\\\n",
         "T(\\frac{n}{2})+a & n\\geq2\n",
-        "\\end{cases}$$\n",
-        "\n",
-        "Con lo que podemos concluir que..."
+        "\\end{cases}$$\n"
       ]
     },
     {
@@ -152,19 +150,11 @@
         "id": "QYlAJsDnXYUX"
       },
       "source": [
-        "##**Demostración**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FZoa-33-aGV3"
-      },
-      "source": [
-        "Sea $T(n)$ el número de operaciones que le toma al algoritmo anterior buscar un dato en una lista de tamaño $n$ y dada la función de recurrencia. P.D. $T(n)=b*a+\\log_2 n$.\n",
+        "##**Demostración**\n",
         "\n",
-        "La demostración queda como ejercicio al lector.\n",
-        "\n"
+        "Sea $T(n)$ el número de operaciones que le toma al algoritmo anterior buscar un dato en una lista de tamaño $n$ y dada la función de recurrencia. P.D. $T(n)=b+a*\\log_2 n$.\n",
+        "\n",
+        "La demostración queda como ejercicio al lector."
       ]
     },
     {
@@ -173,33 +163,15 @@
         "id": "sIGxdX_5canB"
       },
       "source": [
-        "##**Orden de Complejidad (cota superior asintótica)**\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gcfm-WeEc0f2"
-      },
-      "source": [
-        "Dado que de $b$ (una constante) y $a\\cdot\\log_{2}n$, la última es la función que 'crece' mas rápidamente.\n",
+        "##**Orden de Complejidad (cota superior asintótica)**\n",
         "\n",
-        "Se puede concluir que $T(n)\\in O(\\log_{2}n)$, es decir que el orden de complejidad al cual pertenece el algoritmo Búsqueda Binaria es $\\log_{2}n$.\n",
+        "Dada la demostración anterior, se puede concluir que $T(n)\\in O(\\log_{2}n)$, es decir que el orden de complejidad al cual pertenece el algoritmo Búsqueda Binaria es $\\log_{2}n$.\n",
         "\n",
-        "En otras palabras podemos decir que el numero de operaciones que le toma a Búsqueda Binaria buscar un dato en una colección ordenada de tamaño $n$ **es proporcional a** $\\log_{2}n$.\n",
+        "En otras palabras podemos decir que el número de operaciones que le toma a Búsqueda Binaria encontrar un dato en una colección ordenada de tamaño $n$ **es proporcional a** $\\log_{2}n$.\n",
         "\n",
-        "Esto significa (con sustento matemático) que Búsqueda Binaria tiene un mejor desempeño que Búsqueda Lineal en cuanto a la cantidad de operaciones (tiempo) que le toma buscar un dato en una colección de datos.\n",
+        "Esto significa (con sustento matemático) que Búsqueda Binaria tiene un mejor desempeño que Búsqueda Secuencial (Lineal) en cuanto a la cantidad de operaciones (tiempo) que le toma buscar un dato en una colección de datos.\n",
         "\n",
-        "En otros términos podemos decir que si pusiéramos a competir a la Búsqueda Lineal contra, por ejemplo Búsqueda Binaria, el ganador seria **Búsqueda Binaria**."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Z6oqB29zdhAC"
-      },
-      "source": [
-        "##**Apendice**"
+        "En otros términos podemos decir que si pusiéramos a competir a la Búsqueda Secuencial contra, por ejemplo Búsqueda Binaria, el ganador seria **Búsqueda Binaria**.\n"
       ]
     },
     {
